samples/_failures_safe/1761001885_c7acd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5736d1b.c: In function ‘main’:
./samples/SAFE/__tmp_a5736d1b.c:160:5: error: expected expression at end of input
  160 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_a5736d1b.c:160:5: error: expected declaration or statement at end of input
